# internal/entity/pagination.go
@@ -1,0 +1,7 @@
+package entity
+
+type Pagination struct {
+	CurrentPage  int `json:"currentPage"`
+	CountPerPage int `json:"countPerPage"`
+	Total        int `json:"total"`
+}
